localizacion de nodes

--- a/html/mapa.html
+++ b/html/mapa.html
@@ -43,7 +43,7 @@
             <div class="node red r4"><span>13</span></div>
 
             <!-- Rama NARANJA -->
-            <div class="node yellow o1"><span>2</span></div>
+            <div class="node red o1"><span>2</span></div>
             <div class="node red o2"><span>6</span></div>
             <div class="node yellow o3"><span>10</span></div>
 
@@ -66,7 +66,7 @@
             <!-- Rama PÚRPURA -->
             <div class="node purple p1"><span>15</span></div>
             <div class="node purple p2"><span>17</span></div>
-            <div class="node purple p3"><span>19</span></div>
+            <div class="node yellow p3"><span>19</span></div>
 
         </div>
 
