--- a/html/sign_in.html
+++ b/html/sign_in.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KROMA - Registro</title>
+    <title>KROMA - Iniciar Sesión</title>
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
@@ -28,18 +28,13 @@
 
     <div class="container">
         <div class="register-wrapper">
-            
-            <!-- FORMULARIO IZQUIERDA -->
+
+            <!-- LADO IZQUIERDO - Texto + Formulario de login -->
             <div class="form-section">
-                <h1>Únete a KROMA</h1>
-                <p>Crea tu cuenta y comienza tu viaje de aprendizaje</p>
+                <h1>Bienvenid@ de nuevo</h1>
+                <p class="subtitle">Ingresa y sigue subiendo de nivel en tu camino</p>
 
                 <form action="#" method="POST">
-                    <div class="form-group">
-                        <label for="nombre">Nombre completo</label>
-                        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
-                    </div>
-
                     <div class="form-group">
                         <label for="email">Correo electrónico</label>
                         <input type="email" id="email" name="email" placeholder="tu@email.com" required>
@@ -47,35 +42,34 @@
 
                     <div class="form-group">
                         <label for="password">Contraseña</label>
-                        <input type="password" id="password" name="password" placeholder="Mínimo 8 caracteres" required>
+                        <input type="password" id="password" name="password" placeholder="••••••••" required>
                     </div>
 
-                    <div class="form-group">
-                        <label for="password-confirm">Confirmar contraseña</label>
-                        <input type="password" id="password-confirm" name="password-confirm" placeholder="Repite tu contraseña" required>
+                    <div class="options-row">
+                        <div class="checkbox-group">
+                            <input type="checkbox" id="remember" name="remember">
+                            <label for="remember">Recordarme</label>
+                        </div>
+                        <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
                     </div>
 
-                    <div class="checkbox-group">
-                        <input type="checkbox" id="terms" name="terms" required>
-                        <label for="terms">Acepto los términos y condiciones</label>
-                    </div>
-
-                    <button type="submit" class="submit-btn">Crear cuenta</button>
+                    <button type="submit" class="submit-btn">Iniciar sesión</button>
                 </form>
 
-                <div class="login-link">
-                    ¿Ya tienes cuenta? <a href="#">Inicia sesión</a>
+                <div class="register-link">
+                    ¿Aún no tienes cuenta? <a href="registro.html">Regístrate aquí</a>
                 </div>
             </div>
 
-            <!-- LOGO E INFO DERECHA -->
+            <!-- LADO DERECHO - Logo grande + CTA hacia registro -->
             <div class="info-section">
                 <div class="logo-large">
-                    <img src="https://via.placeholder.com/280/330000/ffffff?text=KROMA" alt="KROMA Logo">
+                    <img src="https://via.placeholder.com/420/330000/ffffff?text=KROMA" alt="KROMA Logo Grande">
                 </div>
                 <div class="info-text">
                     <h2>Aprende a tu ritmo</h2>
-                    <p>KROMA es tu plataforma de aprendizaje interactivo. Domina nuevas habilidades con nuestro sistema gamificado de niveles y desafíos progresivos.</p>
+                    <p>KROMA es tu plataforma de aprendizaje interactivo. Domina nuevas habilidades con nuestro sistema
+                        gamificado de niveles y desafíos progresivos.</p>
                 </div>
             </div>
 
