--- a/html/mapa.html
+++ b/html/mapa.html
@@ -27,10 +27,10 @@
     </header>
 
     <div class="main-nav-left">
-        <a href="#">INICIO</a>
-        <a href="#">CURSOS</a>
-        <a href="#">PROGRESO</a>
-        <a href="#">PERFIL</a>
+        <a href="#">🏠inicio </a> <!-- Aquí pones tu icono -->
+        <a href="#">📚cursos</a>
+        <a href="#">📊progreso</a>
+        <a href="#">👤perfil</a>
     </div>
 
     <div class="container">
